tmp-dev-full/objects/VoucherLimit__c/VoucherLimit__c.object-meta.xml
<CustomObject>
    <label>쿠폰 한도</label>
    <nameField>
        <label>쿠폰 범주 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>