tmp-dev-full/objects/VoucherLimit__c/fields/ActiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>ActiveEndDate__c</fullName>
    <formula>VoucherDefinitionId__r.ExpirationDate</formula>
    <label>유효 종료일</label>
    <type>Date</type>
</CustomField>