tmp-dev-full/objects/VoucherLimit__c/fields/ActiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>ActiveStartDate__c</fullName>
    <formula>VoucherDefinitionId__r.EffectiveDate</formula>
    <label>유효 시작일</label>
    <type>Date</type>
</CustomField>