tmp-dev-full/objects/VoucherLimit__c/fields/ComparisonOperator__c.field-meta.xml
<CustomField>
    <fullName>ComparisonOperator__c</fullName>
    <label>범위 선택</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>이하</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>이상</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>