tmp-dev-full/objects/VoucherLimit__c/fields/DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercent__c</fullName>
    <formula>VoucherDefinitionId__r.DiscountPercent</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인율</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>