tmp-dev-full/objects/VoucherLimit__c/fields/Erp_Sync_Skip__c.field-meta.xml
<CustomField>
    <fullName>Erp_Sync_Skip__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Erp_Sync_Skip</label>
    <type>Checkbox</type>
</CustomField>