tmp-dev-full/objects/VoucherLimit__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Flow 에서 사용 될 프로모션 레코드 Id (외부 ID로 사용)</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>