tmp-dev-full/objects/VoucherLimit__c/fields/F_VD_Name__c.field-meta.xml
<CustomField>
    <fullName>F_VD_Name__c</fullName>
    <formula>VoucherDefinitionId__r.Name</formula>
    <label>쿠폰명</label>
    <type>Text</type>
</CustomField>