tmp-dev-full/objects/VoucherLimit__c/fields/F_VD_Type__c.field-meta.xml
<CustomField>
    <fullName>F_VD_Type__c</fullName>
    <formula>CASE(
  TEXT(VoucherDefinitionId__r.Type),
  &quot;DiscountPercentage&quot;, &quot;고정 값&quot;,
  &quot;FixedValue&quot;,          &quot;할인&quot;,
  &quot;ProductOrService&quot;,    &quot;제품 또는 서비스&quot;,
  &quot;등록되지 않은 값&quot;
)</formula>
    <label>쿠폰 유형</label>
    <type>Text</type>
</CustomField>