tmp-dev-full/objects/VoucherLimit__c/fields/FaceValue__c.field-meta.xml
<CustomField>
    <fullName>FaceValue__c</fullName>
    <formula>VoucherDefinitionId__r.FaceValue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>