tmp-dev-full/objects/VoucherLimit__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>활성 여부</label>
    <type>Checkbox</type>
</CustomField>