tmp-dev-full/objects/VoucherLimit__c/fields/PromotionId__c.field-meta.xml
<CustomField>
    <fullName>PromotionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>프로모션 ID</label>
    <referenceTo>Promotion</referenceTo>
    <relationshipLabel>적용 가능 쿠폰</relationshipLabel>
    <relationshipName>VoucherLimitId</relationshipName>
    <type>Lookup</type>
</CustomField>