tmp-dev-full/objects/VoucherLimit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ProductIncludeList</fullName>
                <label>사용가능 품목</label>
            </value>
            <value>
                <fullName>ProductExcludeList</fullName>
                <label>사용제외 품목</label>
            </value>
            <value>
                <fullName>StoreIncludeList</fullName>
                <label>사용가능 매장</label>
            </value>
            <value>
                <fullName>StoreExcludeList</fullName>
                <label>사용제외 매장</label>
            </value>
            <value>
                <fullName>StoreTypeIncludeList</fullName>
                <label>사용가능 매장구분</label>
            </value>
            <value>
                <fullName>MaxDiscountRate</fullName>
                <label>적용가능 판매할인율</label>
            </value>
            <value>
                <fullName>GradeIncludeList</fullName>
                <label>사용가능 회원등급</label>
            </value>
            <value>
                <fullName>ProductCategoryIncludeList</fullName>
                <label>사용가능 품목분류</label>
            </value>
            <value>
                <fullName>ProductCategoryExcludeList</fullName>
                <label>사용제외 품목분류</label>
            </value>
            <value>
                <fullName>OrderTypeIncludeList</fullName>
                <label>사용가능 주문구분</label>
            </value>
            <value>
                <fullName>MinTotalQuantity</fullName>
                <label>사용가능 판매개수</label>
            </value>
            <value>
                <fullName>MinSalesAmount</fullName>
                <label>사용가능 판매금액</label>
            </value>
            <value>
                <fullName>PromotionIncludeList</fullName>
                <label>적용가능 프로모션</label>
            </value>
            <value>
                <fullName>PromotionExcludeList</fullName>
                <label>적용제외 프로모션</label>
            </value>
            <value>
                <fullName>DiscountRate</fullName>
                <label>판매 할인율</label>
            </value>
            <value>
                <fullName>SalesAmount</fullName>
                <label>판매 금액</label>
            </value>
            <value>
                <fullName>TotalQuantity</fullName>
                <label>판매 개수</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>