tmp-dev-full/objects/VoucherLimit__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>값</label>
    <length>255</length>
    <type>Text</type>
</CustomField>