tmp-dev-full/objects/VoucherLimit__c/fields/VoucherDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>VoucherDefinitionId__c</fullName>
    <label>바우처 정의 ID</label>
    <referenceTo>VoucherDefinition</referenceTo>
    <relationshipName>VoucherLimit_Id</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>