tmp-dev-full/objects/VoucherLimit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>모든 쿠폰 한도</label>
</ListView>